"Gráficas actualizadas con nuevos parámetros"

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
 main.*
+
 OptomechanicalCoolingWithNotes.*
+
 OptomechanicalCoolingNotes.bib
+
 mainNotes.bib
+
 TemperaturaFinal.*
+
 TemperaturaFinalNotes.*
+
 CoeficientesA.*
+
 Presentacion.*
+SolucionesFloquetNGrande.*
+OptomechanicalCooling.aux
+OptomechanicalCooling.synctex.gz
+OptomechanicalCooling.pdf
