problema con gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ TemperaturaFinal.*
 TemperaturaFinalNotes.*
 CoeficientesA.*
 Presentacion.*
+OptomechanicalCooling.aux
+OptomechanicalCooling.log
+OptomechanicalCooling.pdf
+OptomechanicalCooling.synctex.gz
